Otimização das mensagens de validação dos campos.

--- a/taskManager/app/src/main/java/view/JDialogProjectScreen.form
+++ b/taskManager/app/src/main/java/view/JDialogProjectScreen.form
@@ -111,13 +111,14 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jScrollPane1" pref="392" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jScrollPane1" alignment="1" pref="392" max="32767" attributes="0"/>
                       <Component id="jLabelNewProjectDescriptionCab" alignment="1" max="32767" attributes="0"/>
                       <Component id="jTextFieldNewProjectName" alignment="1" max="32767" attributes="0"/>
                       <Component id="jLabelNewProjectNameCab" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jLabelProjectNameError" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -130,7 +131,9 @@
                   <Component id="jLabelNewProjectNameCab" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jTextFieldNewProjectName" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                  <Component id="jLabelProjectNameError" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabelNewProjectDescriptionCab" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="236" max="32767" attributes="0"/>
@@ -182,6 +185,17 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="jLabelProjectNameError">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="10" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="33" red="cc" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Name is required."/>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
